fix text overflow in restaurant card & remove flex-direction:row as it is default

--- a/client/src/styles/RestaurantCard.css
+++ b/client/src/styles/RestaurantCard.css
@@ -5,7 +5,6 @@
 
 .rc-rating {
   display: flex;
-  flex-direction: row;
   align-items: center;
 }
 
